styles.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');

* {
  box-sizing: border-box;
  font-family: 'Playfair Display', serif;
}

body {
  margin: 0;
  font-size: 17px;
  line-height: 1.4;
  
}

a {
  color: #000;
}

p {
  margin: 8px 0;
  text-align: justify;
}

ul {
  padding-left: 22px;
}

.page {
  padding: 12px 36px;
}

.container {
  max-width: 840px;
  margin: 0 auto;
}

.page main {
  flex: 1;
  padding-top: 60px;

  display: flex;
  justify-content: center;
  flex-direction: column;
}

.content {
  min-width: 100%;
  margin-top: -10%;
}

.h1 {
  font-size: 2em;
  font-weight: bold;
}



@media screen and (min-width: 768px) {

  body {
    font-size: 21px;
  }

  .content {
    font-size: 28px;
    min-width: 380px;
    max-width: 640px;
  }


  .content p + p {
    margin-top: 32px;
  }
}

.link-container {

  margin: 32px 0;
  display: flex;
  justify-content: space-between;
  justify-content: center;
  
}

.fadeIn {
  opacity: 0;
  animation: fadeIn 1s ease 1s both;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    max-height: 0;
  }
  
  to {
    opacity: 1;
    max-height: 100px;
  }
}


.button {

  display: flex;
  align-items: stretch;

  color: #000;
  text-decoration: none;

  display: block;
  position: relative;

  padding: 1px;
  /* background-color: #fff; */
}


.button span {
  display: block;
  padding: 16px 32px;
  background-color: #fff;

  text-align: center;
  word-wrap: nowrap;
}

.button::before {
  top: 0;
}

.button::after {
  bottom: 0;
}

.button::before,
.button::after {

  content: '';
  
  position: absolute;
  z-index: -1;
  left: 50%;

  display: block;
  width: 0;
  height: 1px;
  background-color: #000;

  transition: width 0.3s ease-in 0.3s,
    left 0.3s ease-in 0.3s,
    height 0.3s ease-in;
}


.button:hover::before,
.button:hover::after {

  height: 50%;
  width: 100%;
  left: 0;

  transition: width 0.3s ease-in,
    left 0.3s ease-in,
    height 0.3s ease-in 0.3s;
}



footer {
  text-align: center;
  font-size: 14px;
}

.icon-links  {
  display: flex;
  justify-content: center;
  margin-bottom: 12px;
}

.icon-links a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 36px;
  height: 36px;
}
.made span + span::before {
  content: ' - '
}


header {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;

  display: flex;
  justify-content: space-between;
  padding: 0 8px;
  height: 60px;

  background-color: rgba(255, 255,255, 0.8);
  backdrop-filter: blur(3px);

  font-size: 17px;
}

header a {
  display: flex;
  align-items: center;
  padding: 0 16px;
}

header > div {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}


header > div:first-child {
  justify-content: flex-start;
}

header > div:last-child {
  justify-content: flex-end;
}

.logo {

  display: flex;
  align-items: center;
  justify-content: center;

  width: 32px;
  height: 32px;
  line-height: 32px;
  font-weight: bold;
  
  text-decoration: none;
  color: #fff;
  background-color: #000;

  border-radius: 50%;
}

